# SENTRY-Anytime-Valid-E-Process-Monitoring-of-LLM-Agent-Action-Streams

./: .gitignore  README.md  algorithm.md  cover_letter.docx  pyproject.toml  reproduce.sh  requirements.txt  survey.md
examples/: run_synthetic_validation.py
manuscript/: .gitignore  README.md  SUBMISSION_CHECKLIST.md  appendix.tex  cover_letter.tex  make_figures.py  references.bib  references_ieee.bib  sentry.bbl  sentry.tex  sentry_ieee.bbl  sentry_ieee.tex
real_data/: RESULTS.md  adapters.py  evaluate.py  evaluate_generalization.py  report.py  results.json  results_generalization.json
real_data/agentdojo/: run.py
real_data/agentdojo/logs/openrouter-free-router-local/banking/user_task_0/important_instructions/: injection_task_0.json  injection_task_1.json  injection_task_2.json  injection_task_3.json
real_data/tau_bench/: run.py
real_data/tau_bench/logs/: tool-calling-free-0.0_range_0-15_user-free-llm_0709083747.json  tool-calling-free-0.0_range_0-2_user-free-llm_0709082851.json  tool-calling-free-0.0_range_0-50_user-free-llm_0722020416.json
real_data/tau_bench/logs_deepseek/tool-calling-deepseek-v4-flash-0.0_range_0-50_user-deepseek/: deepseek-v4-flash-llm_0722022545.json
real_data/tau_bench/logs_deepseek_airline/tool-calling-deepseek-v4-flash-0.0_range_0-50_user-deepseek/: deepseek-v4-flash-llm_0722110732.json
sentry/: __init__.py  baseline.py  calibration.py  detector.py  pipeline.py  scores.py  streams.py
tests/: test_baseline.py  test_calibration.py  test_detector.py  test_pipeline_synthetic.py  test_scores.py
(+670 files in other folders)
